--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
            </p>
         </div>
         <div class="sobre-img">
-            <img src="imagens/sobre1.jpg" alt="Sobre 1">
+            <img src="imagens/torre.jpg" alt="Sobre 1">
         </div>
         <div class="sobre-img">
-            <img src="imagens/sobre2.jpg" alt="Sobre 2">
+            <img src="imagens/mato.jpg" alt="Sobre 2">
         </div>
     </section>
 
